# bloom

./: .gitignore  Cargo.toml  README.md  main.rs
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/: main.rs  perform.rs
src/bloom/: process.rs
src/bloom/containers/: container.rs  container_bitset_file.rs  container_file.rs  container_memory.rs  container_memory_bloom.rs  container_memory_xxh.rs  mod.rs
src/bloom/readers_writers/: mod.rs  reader_writer.rs  reader_writer_bitset_file.rs  reader_writer_file.rs  reader_writer_memory.rs
tests/: integration_tests.rs
