[package]
name = "bloom"
version = "0.0.1"
authors = ["kenorb <kenorb@users.noreply.github.com>", "nseam"]

[dependencies]
bit-set = "0.5.2"
bloomfilter = "1.0.13"
crc32fast = "1.3.2"
memory-stats = "1.1.0"
parse-size = "1.0.0"
log = "0.4.20"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]
