[package]
name = "bloom"
authors = ["kenorb <kenorb@users.noreply.github.com>", "nseam"]
description = """
Bloom is a command to filter out duplicated lines using bloom filter method.
"""
edition = "2021"
license = "Unlicense OR MIT"
version = "0.0.1"

[dependencies]
bit-set = "0.5.2"
bloomfilter = "1.0.13"
crc32fast = "1.3.2"
memory-stats = "1.1.0"
parse-size = "1.0.0"
log = "0.4.20"
bit-vec = "0.6.3"
byteorder = "1.5.0"
num_enum = "0.7.2"

[dependencies.xxhash-rust]
version = "0.8.8"
features = ["xxh3", "xxh32", "xxh64"]

[profile.optimized]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = "off"
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "symbols"


[profile.release]
lto = "off"
